[build-system]
requires = ["maturin>=1.8,<2.0"]
build-backend = "maturin"

[project]
name = "pvisor"
requires-python = ">=3.8,<3.14"
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
]
dependencies = ["pandas", "numpy", "pytest", "sphinx", "sphinx_rtd_theme", "maturin", "py-xdrlib"]
dynamic = ["version"]
[tool.maturin]
features = ["pyo3/extension-module"]
